syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Saturn.Messages";

message CommonRequest {
    google.protobuf.Timestamp timestamp = 1;
    int32 version = 2;
    Platform platform = 3;
    string environment = 4;
}

enum Platform {
    PLATFORM_EDITOR = 0;
    PLATFORM_APPLE = 1;
    PLATFORM_GOOGLE = 2;
}

message CommonResponse {
    int32 code = 1;
    string access_token = 2;
    string message = 3;
    bool is_reboot = 4;
}

message DefaultResponse {
    CommonResponse head = 1;
}

message Reward {
    Type type = 1;
    string id = 2;
    int32 num = 3;
}

enum Type {
    TYPE_UNKNOWN = 0;
    TYPE_EXP = 1;
    TYPE_ITEM = 2;
    TYPE_PACK = 10;
}
